fix: enable-native-access